--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -670,6 +670,15 @@
     height: 450px;
   }
 }
+@media screen and (max-width: 520px) {
+  .main-visual-inner-guide {
+    background-image: url("../images/junenji_guide_mv_mb.png");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 327px;
+  }
+}
 .main-contents {
   width: 100%;
   max-width: 1320px;
@@ -1533,6 +1542,12 @@
     line-height: 1.7647058824;
   }
 }
+@media screen and (max-width: 520px) {
+  .main-video-guide-text {
+    font-size: 1.3rem;
+    line-height: 1.4615384615;
+  }
+}
 .main-grave {
   position: relative;
   padding-top: 150px;
@@ -2369,6 +2384,12 @@
     padding-top: 100px;
   }
 }
+@media screen and (max-width: 520px) {
+  .main-guide {
+    padding-top: 57px;
+    padding-bottom: 94px;
+  }
+}
 .main-guide-link-list {
   display: flex;
   position: relative;
@@ -2382,6 +2403,11 @@
     width: 70%;
     -moz-column-gap: 19px;
          column-gap: 19px;
+  }
+}
+@media screen and (max-width: 520px) {
+  .main-guide-link-list {
+    width: 90%;
   }
 }
 .main-guide-link-item {
@@ -2401,8 +2427,21 @@
     line-height: 1.6363636364;
   }
 }
+@media screen and (max-width: 520px) {
+  .main-guide-link-item {
+    padding-top: 13px;
+    padding-bottom: 13px;
+    font-size: 1.4rem;
+    line-height: 1.6428571429;
+  }
+}
 .main-guide-list {
   margin-top: 200px;
+}
+@media screen and (max-width: 520px) {
+  .main-guide-list {
+    margin-top: 94px;
+  }
 }
 .main-guide-item {
   margin-top: 400px;
@@ -2410,6 +2449,11 @@
 @media screen and (max-width: 960px) {
   .main-guide-item {
     margin-top: 200px;
+  }
+}
+@media screen and (max-width: 520px) {
+  .main-guide-item {
+    margin-top: 94px;
   }
 }
 .main-guide-item:first-of-type {
@@ -2423,6 +2467,11 @@
 @media screen and (max-width: 960px) {
   .main-guide-title {
     font-size: 4rem;
+  }
+}
+@media screen and (max-width: 520px) {
+  .main-guide-title {
+    font-size: 2.3rem;
   }
 }
 .main-guide-slider {
@@ -2461,6 +2510,16 @@
     margin-top: 80px;
   }
 }
+@media screen and (max-width: 520px) {
+  .main-guide-slider-tablet {
+    margin-top: 65px;
+  }
+}
+@media screen and (max-width: 520px) {
+  .main-guide-slider-tablet-item img {
+    height: 190px;
+  }
+}
 .main-guide-text {
   margin-top: 50px;
   font-size: 2rem;
@@ -2474,6 +2533,13 @@
     font-size: 1.7rem;
     line-height: 1.7647058824;
     font-weight: bold;
+  }
+}
+@media screen and (max-width: 520px) {
+  .main-guide-text {
+    margin-top: 30px;
+    font-size: 1.3rem;
+    line-height: 1.6923076923;
   }
 }
 .main-guide-button-list {
@@ -2491,6 +2557,12 @@
     margin-top: 80px;
     flex-wrap: wrap;
     row-gap: 20px;
+  }
+}
+@media screen and (max-width: 520px) {
+  .main-guide-button-list {
+    margin-top: 40px;
+    row-gap: 10px;
   }
 }
 .main-guide-button-item {
@@ -2536,6 +2608,12 @@
     height: 200px;
   }
 }
+@media screen and (max-width: 520px) {
+  .main-guide-button-item-image-tablet {
+    width: 151px;
+    height: 97px;
+  }
+}
 .main-guide-button-item-text {
   width: 50%;
   font-weight: bold;
@@ -2558,12 +2636,22 @@
     border-width: 0 30px 30px 0;
   }
 }
+@media screen and (max-width: 520px) {
+  .main-guide-button-item-text-triangle {
+    border-width: 0 14px 14px 0;
+  }
+}
 .main-guide-button-item-text-top {
   font-size: 1.3rem;
 }
 @media screen and (max-width: 960px) {
   .main-guide-button-item-text-top {
     font-size: 1.6rem;
+  }
+}
+@media screen and (max-width: 520px) {
+  .main-guide-button-item-text-top {
+    font-size: 0.8rem;
   }
 }
 .main-guide-button-item-text-bottom {
@@ -2574,6 +2662,12 @@
   .main-guide-button-item-text-bottom {
     margin-top: 15px;
     font-size: 2.9rem;
+  }
+}
+@media screen and (max-width: 520px) {
+  .main-guide-button-item-text-bottom {
+    margin-top: 10px;
+    font-size: 1.5rem;
   }
 }
 .main-guide-modal {
@@ -2716,12 +2810,27 @@
   width: 100%;
   height: 389px;
 }
+@media screen and (max-width: 520px) {
+  .main-guide-modal-contents-tablet-image {
+    height: 190px;
+  }
+}
 .main-guide-modal-contents-tablet-title {
   font-size: 3rem;
   line-height: 1.5;
 }
+@media screen and (max-width: 520px) {
+  .main-guide-modal-contents-tablet-title {
+    font-size: 2.1rem;
+  }
+}
 .main-guide-modal-contents-tablet-title-small {
   font-size: 1.7rem;
+}
+@media screen and (max-width: 520px) {
+  .main-guide-modal-contents-tablet-title-small {
+    font-size: 1.3rem;
+  }
 }
 .main-guide-modal-contents-tablet-text {
   margin-top: 50px;
@@ -2729,19 +2838,44 @@
   line-height: 1.7647058824;
   text-align: left;
 }
+@media screen and (max-width: 520px) {
+  .main-guide-modal-contents-tablet-text {
+    margin-top: 30px;
+    font-size: 1.3rem;
+    line-height: 1.6923076923;
+  }
+}
 .main-guide-modal-contents-tablet-text-list {
   width: 90%;
   margin: 0 auto;
   margin-top: 40px;
   margin-bottom: 100px;
 }
+@media screen and (max-width: 520px) {
+  .main-guide-modal-contents-tablet-text-list {
+    margin-top: 20px;
+    margin-bottom: 94px;
+  }
+}
 .main-guide-modal-contents-tablet-text-image {
   margin-top: 50px;
   height: 451px;
 }
+@media screen and (max-width: 520px) {
+  .main-guide-modal-contents-tablet-text-image {
+    margin-top: 30px;
+    height: 220px;
+  }
+}
 .main-guide-modal-contents-tablet-text-image-2 {
   margin-top: 50px;
   height: 904px;
+}
+@media screen and (max-width: 520px) {
+  .main-guide-modal-contents-tablet-text-image-2 {
+    margin-top: 57px;
+    height: 446px;
+  }
 }
 .main-guide-modal-contents-tablet-button {
   display: block;
@@ -2753,6 +2887,14 @@
   font-weight: bold;
   color: #FFFFFF;
   border: 1px solid #707070;
+}
+@media screen and (max-width: 520px) {
+  .main-guide-modal-contents-tablet-button {
+    margin-top: 79px;
+    padding-top: 13px;
+    padding-bottom: 13px;
+    font-size: 1.8rem;
+  }
 }
 .main-guide-modal-overlay {
   z-index: 10;
